Updated due date for W23

--- a/W23_Project_4_git.ipynb
+++ b/W23_Project_4_git.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "# Project 4, Git Practice, APS1070 Winter 2023\n",
         "#### **Linear Regression -  15 points**\n",
-        "**Deadline: March 31st, 23:00**\n",
+        "**Deadline: April 3rd, 23:00**\n",
         "\n",
         "**Academic Integrity**\n",
         "\n",
